[project]
name = "ai-gan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchmetrics>=1.8.0",
    "torchvision>=0.22.1",
]
